Fixed dependency issue and modified notebook to have outputs

--- a/dec_chatbot.ipynb
+++ b/dec_chatbot.ipynb
@@ -45,18 +45,18 @@
       "cell_type": "code",
       "source": [
         "!pip install -q \\\n",
-        "pandas==2.2.3 \\\n",
         "pinecone==5.4.2 \\\n",
-        "langchain_pinecone==0.2.0 \\\n",
-        "langchain-huggingface==0.1.2 \\\n",
-        "langchain-community==0.3.13 \\\n",
-        "langchain-openai==0.2.14"
+        "langchain-community==0.2.19 \\\n",
+        "langchain-pinecone==0.1.2 \\\n",
+        "langchain-huggingface==0.0.3 \\\n",
+        "langchain-openai==0.1.25 \\\n",
+        "pydantic==1.10.8"
       ],
       "metadata": {
         "collapsed": true,
         "id": "axkkHda_Blxl"
       },
-      "execution_count": null,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -71,12 +71,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "collapsed": true,
-        "id": "E_XO7wK8_EAT"
+        "id": "E_XO7wK8_EAT",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d6a986c7-4600-44be-e9b8-e340c1d8aef8"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Najeeb: Hi everyone, you are welcome to Data Engineering Community, a community created for data Engineers at all levels where we interact to share ideas, knowledge and resources, ask and answer questions, share job and other opportunities, network and more. \\n\\nTo better understand the status of this group members in other to guide decision making as regards activities on this group, a simple survey has been created to get basic information of members. Please take a minute to fill this form on or before Thursday 12th of January, 2023. \\n\\nhttps://forms.gle/Snw4rdCw2aB7aymG9\\n\\nI am confident this group will impact us positively as we strive to grow together.',\n",
+              " 'Najeeb: Good afternoon all, we have had less than 20% responses to this survey so far. Please let us endeavour to fill this survey today, it is a short survey that can be completed under 2minutes. Cheers']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ],
       "source": [
         "import pandas as pd\n",
         "\n",
@@ -107,15 +123,39 @@
         "# Instantiate a model object\n",
         "model = HuggingFaceEmbeddings(model_name='all-MiniLM-L6-v2')\n",
         "# Use the model object to generate embeddings\n",
-        "embeddings = model.embed_query(data[0])\n",
+        "embeddings = model.embed_query(\"data[0]\")\n",
         "print(\"Generated Embeddings:\", pd.DataFrame(embeddings))"
       ],
       "metadata": {
-        "collapsed": true,
-        "id": "yoPmHpO7XeDK"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yoPmHpO7XeDK",
+        "outputId": "3dae8192-a0a5-44d9-a495-a395bab11f6c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Generated Embeddings:             0\n",
+            "0    0.038669\n",
+            "1    0.094582\n",
+            "2   -0.049572\n",
+            "3    0.012693\n",
+            "4   -0.059613\n",
+            "..        ...\n",
+            "379  0.056619\n",
+            "380  0.054203\n",
+            "381  0.041215\n",
+            "382 -0.036726\n",
+            "383 -0.052314\n",
+            "\n",
+            "[384 rows x 1 columns]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -142,7 +182,7 @@
       "metadata": {
         "id": "XOFYYLPnBXW7"
       },
-      "execution_count": 66,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -164,7 +204,7 @@
       "metadata": {
         "id": "vY0kl74fB7XF"
       },
-      "execution_count": 68,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -177,7 +217,7 @@
       "metadata": {
         "id": "dUuIKie1DXir"
       },
-      "execution_count": 69,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -194,7 +234,7 @@
       "metadata": {
         "id": "ruEzr1DaCetA"
       },
-      "execution_count": 70,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -207,10 +247,28 @@
       ],
       "metadata": {
         "collapsed": true,
-        "id": "erky2o3rCtMo"
+        "id": "erky2o3rCtMo",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d8ba2fe8-2b86-45d6-fd6e-6edd2c105244"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'dimension': 384,\n",
+              " 'index_fullness': 0.0,\n",
+              " 'namespaces': {},\n",
+              " 'total_vector_count': 0}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -257,7 +315,7 @@
       "metadata": {
         "id": "1MqG4Yz_C78s"
       },
-      "execution_count": 73,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -275,10 +333,28 @@
         "index.describe_index_stats()"
       ],
       "metadata": {
-        "id": "jLigstNBbysY"
+        "id": "jLigstNBbysY",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cd4143b8-ebf4-4bdc-8628-4e1f9191c352"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'dimension': 384,\n",
+              " 'index_fullness': 0.0,\n",
+              " 'namespaces': {'': {'vector_count': 2}},\n",
+              " 'total_vector_count': 2}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -294,8 +370,8 @@
       "source": [
         "query = \"What did Najeeb say\"\n",
         "query = \"Which community was everyone welcomed to?\"\n",
-        "query = \"How many percent response do we have for the survey?\"\n",
         "query = \"What is data engineering?\"\n",
+        "query = \"How many percent response do we have for the survey?\"\n",
         "\n",
         "vector_store.similarity_search(\n",
         "    query,  # our search query\n",
@@ -304,10 +380,26 @@
       ],
       "metadata": {
         "collapsed": true,
-        "id": "A7MujfXjb12a"
+        "id": "A7MujfXjb12a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b88d99b3-7be9-4cc5-dbe6-8b442b54287e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[Document(metadata={'id': 1.0}, page_content='Najeeb: Good afternoon all, we have had less than 20% responses to this survey so far. Please let us endeavour to fill this survey today, it is a short survey that can be completed under 2minutes. Cheers'),\n",
+              " Document(metadata={'id': 0.0}, page_content='Najeeb: Hi everyone, you are welcome to Data Engineering Community, a community created for data Engineers at all levels where we interact to share ideas, knowledge and resources, ask and answer questions, share job and other opportunities, network and more. \\n\\nTo better understand the status of this group members in other to guide decision making as regards activities on this group, a simple survey has been created to get basic information of members. Please take a minute to fill this form on or before Thursday 12th of January, 2023. \\n\\nhttps://forms.gle/Snw4rdCw2aB7aymG9\\n\\nI am confident this group will impact us positively as we strive to grow together.')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -349,7 +441,7 @@
         "collapsed": true,
         "id": "ia9fO_s2ddC0"
       },
-      "execution_count": 90,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -365,20 +457,20 @@
         },
         "collapsed": true,
         "id": "RgjYRgiKQ_gh",
-        "outputId": "b355d0a0-8158-4b28-e4d6-2d21657865f8"
+        "outputId": "4ff9807c-b948-41fc-f5b4-dd2099126d15"
       },
-      "execution_count": 94,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "{'query': 'How many percent response do we have for the survey?',\n",
-              " 'result': 'less than 20%'}"
+              " 'result': '\\nAs of Thursday 12th of January, 2023, the survey has received 100% response.'}"
             ]
           },
           "metadata": {},
-          "execution_count": 94
+          "execution_count": 20
         }
       ]
     },
@@ -410,7 +502,7 @@
       "metadata": {
         "id": "qr1hwXxSwLo1"
       },
-      "execution_count": 91,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -421,10 +513,26 @@
         "qa_chain.invoke(query)"
       ],
       "metadata": {
-        "id": "1PxIOOkbUniW"
+        "id": "1PxIOOkbUniW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "45cf020e-fdeb-4242-d05f-f2c6eb7dda0f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'query': 'How many percent response do we have for the survey?',\n",
+              " 'result': 'less than 20%'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -457,7 +565,7 @@
       "metadata": {
         "id": "8oGYhWDrmaaV"
       },
-      "execution_count": 93,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -469,10 +577,26 @@
         "#qa.run(query)"
       ],
       "metadata": {
-        "id": "VZwlVnjzkqKV"
+        "id": "VZwlVnjzkqKV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "affd3460-7f2a-4ed2-d226-4d59ea9a7111"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'query': 'How many percent response do we have for the survey?',\n",
+              " 'result': 'Less than 20% responses have been received for the survey so far.'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
     }
   ]
 }
